# xwr_raw_ros

./: CMakeLists.txt  package.xml  requirements.txt
configs/1843/: 1843_doppler_v1.cfg
configs/1843aop/: 1843aop_range_v1.cfg
include/xwr_raw_ros/: recver.hpp
launch/: 1_radar_bringup.launch.py  bringup_2_radar.launch.py  bringup_radar_record.launch.py  radar_visda_c_1843.launch.py  radar_visda_c_1843aop.launch.py  radar_visra_c.launch.py  radar_visra_c_1843.launch.py  radar_visra_c_1843aop.launch.py
scripts/: radar_cfg.py  visda.py  visra.py
src/: recver.cpp
src/nodes/: recver_node.cpp
xwr_raw_ros/: dca1000.py  radar_config.py  radar_pub.py
